# testRobot

./: README.md
hello1/: CMakeLists.txt  package.xml
hello1/launch/: gazebo.launch.py  hello.launch.py  hello1.launch.py  home.launch.py
hello1/meshes/: leftlink.STL  rightlink.STL
hello1/urdf/: hello1.urdf
hello1/world/: hello1.world
test2/: CMakeLists.txt  package.xml
test2/config/: amcl_var.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
test2/launch/: display.launch  gazebo.launch  mapping.launch  navigation.launch
test2/map/: map.pgm  map.yaml
test2/meshes/: base_link.STL
test2/rviz/: test.rviz
test2/urdf/: test2.csv  test2.urdf
test2/world/: test.world
