<package format="2">
  <name>test2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for test2</p>
    <p>This package contains configuration data, 3D models and launch files
for test2 robot</p>
  </description>
  <author>Harinarayanan</author>
  <maintainer email="harinnmg@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
